# Eliza-GPT

./: .gitignore  CHANGES.md  MANIFEST.in  README.md  pyproject.toml  tox.ini
.github/workflows/: tests.yml
examples/: README.md  langchain_chat.py  openai_chat.py
src/eliza_gpt/: __init__.py  api.py  cli.py  v1.py
tests/: test_eliza_gpt.py
